[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-hello-rpc"
description = "Blockchain, Rebuilt for Scale"
version = "1.1.7"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
solana-client = "1.1.6" 
solana-sdk = "1.1.6" 
solana-core = "1.1.6" 
