[package]
authors = ["Solana Maintainers <maintainers@solana.com>"]
edition = "2018"
name = "solana-hello-rpc"
description = "Blockchain, Rebuilt for Scale"
version = "0.1.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
solana-client = {git = "https://github.com/solana-labs/solana", rev = "efb4988d108fa2f52c35d671a177d3b18db6c495"}
solana-sdk = {git = "https://github.com/solana-labs/solana", rev = "efb4988d108fa2f52c35d671a177d3b18db6c495"}
solana-core = {git = "https://github.com/solana-labs/solana", rev = "efb4988d108fa2f52c35d671a177d3b18db6c495"}
